--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <title>Frontend Mentor | Single-page design portfolio</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <main>
+     <header class="header container">
+      <img src="./assets/logo.svg" alt="">
+      <button>Free Consultation</button>
+    </header>
+  </main>
 </body>
 </html>
