wip: add hero structure and styles

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       <img src="./assets/logo.svg" alt="">
       <button>Free Consultation</button>
     </header>
+    <!-- hero -->
+    <section class="container hero">
+      <div class="hero__content">
+        <h1>Design solutions made easy</h1>
+        <p>With over ten years of experience in various design disciplines, I'm your one-stop shop for your design needs.</p>
+      </div>
+    </section>
   </main>
 </body>
 </html>
