wip: add services structure and styles

--- a/index.html
+++ b/index.html
@@ -22,6 +22,49 @@
         <p>With over ten years of experience in various design disciplines, I'm your one-stop shop for your design needs.</p>
       </div>
     </section>
+    <!-- services -->
+    <section class="container services">
+      <div class="services__cards">
+        <div class="services__card services__card--design">
+          <div class="services__card--content">
+            <img src="./assets/pattern-graphic-design.svg" alt="pattern-graphic-design">
+            <h2>Graphic Design</h2>
+          </div>
+        </div>
+        <div class="services__card--group">
+          <div class="services__card  services__card--ux">
+            <div class="services__card--content">
+              <img src="./assets/pattern-ui-ux.svg" alt="pattern-ui-ux">
+              <h2>UI/UX</h2>
+            </div>
+          </div>
+          <div class="services__card services__card--apps">
+            <div class="services__card--content">
+              <img src="./assets/pattern-apps.svg" alt="pattern-apps">
+              <h2>Apps</h2>
+            </div>
+          </div>
+        </div>
+        <div class="services__card services__card--illustration">
+          <div class="services__card--content">
+            <img src="./assets/pattern-illustrations.svg" alt="pattern-illustrations">
+            <h2>Illustration</h2>
+          </div>
+        </div>
+        <div class="services__card services__card--photography">
+          <div class="services__card--content">
+            <img src="./assets/pattern-photography.svg" alt="pattern-photography">
+            <h2>Photography</h2>
+          </div>
+        </div>
+        <div class="services__card services__card--motion">
+          <div class="services__card--content">
+            <img src="./assets/pattern-motion-graphics.svg" alt="pattern-motion-graphics">
+            <h2>Motion Graphics</h2>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
