--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
         </div>
       </div>
     </section>
+    <!-- about -->
+    <section class="container about">
+      <div class="about__content">
+        <img src="./assets/image-amy.webp" alt="" class="about__image">
+        <div class="about__text">
+          <h2>I’m Amy, and I’d love to work on your next project</h2>
+          <p>I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations to complete mobile apps. I’m also handy with a camera!</p>
+          <button class="about__button">Free Consultation</button>
+        </div>
+      </div>
+    </section>
+    
   </main>
 </body>
 </html>
