--- a/index.html
+++ b/index.html
@@ -76,7 +76,29 @@
         </div>
       </div>
     </section>
-    
+     <!-- my work -->
+    <section class="my-work">
+      <div class="my-work__content">
+        <h2>My Work</h2>
+        <div class="my-work__slider">
+          <div class="my-work__slider-images">
+            <img src="./assets/image-slide-1.jpg" alt="slide-1">
+            <img src="./assets/image-slide-2.jpg" alt="slide-2">
+            <img src="./assets/image-slide-3.jpg" alt="slide-3">
+            <img src="./assets/image-slide-4.jpg" alt="project-4">
+            <img src="./assets/image-slide-5.jpg" alt="project-5">
+          </div>
+        </div>
+        <div class="my-work_buttons">
+          <button class="my-work__button">
+            <img src="./assets/icon-arrow-left.svg" alt="icon-arrow-left">
+          </button>
+          <button class="my-work__button">
+            <img src="./assets/icon-arrow-right.svg" alt="icon-arrow-right">
+          </button>
+        </div>
+      </div>
+    </section>
   </main>
 </body>
 </html>
