--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
         </div>
       </div>
     </section>
+    <!-- contact -->
+    <section class="container contact">
+      <div class="contact__content">
+        <div class="contact__text">
+          <h4>Book a call with me</h4>
+          <p>I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a free consultation. Then we can move forward from there.</p>
+        </div>
+        <button class="contact__button">Free Consultation</button>
+      </div>
+    </section>
   </main>
 </body>
 </html>
