wip: add footer html

--- a/index.html
+++ b/index.html
@@ -110,5 +110,12 @@
       </div>
     </section>
   </main>
+  <!-- footer -->
+  <footer class="container footer">
+    <div class="footer__content">
+     <img src="./assets/logo.svg" alt="logo" class="footer__logo">
+      <button class="footer__button">Free Consultation</button>
+    </div>
+  </footer>
 </body>
 </html>
